--- a/MVC6_QAndA.DAL.Tests/MVC6_QAndA.DAL.Tests.csproj
+++ b/MVC6_QAndA.DAL.Tests/MVC6_QAndA.DAL.Tests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\MVC6_QAndA.DAL\MVC6_QAndA.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Answers\" />
+  </ItemGroup>
+
 </Project>
