step 1 Identity new MVC Individual Account

--- a/MVC6_QAndA.WEB/MVC6_QAndA.WEB.csproj
+++ b/MVC6_QAndA.WEB/MVC6_QAndA.WEB.csproj
@@ -2,10 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>aspnet-MVC6_QAndA.WEB-5CCBDE6C-D0C4-43DD-9E95-881DD70E0179</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MVC6_QAndA.DAL\MVC6_QAndA.DAL.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
