--- a/MVC6_QAndA.WEB/appsettings.json
+++ b/MVC6_QAndA.WEB/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVC6_QAndA.WEB-5CCBDE6C-D0C4-43DD-9E95-881DD70E0179;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "QAndAContext": "Server=(localdb)\\mssqllocaldb;Database=QAndADb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
