--- a/MVC6_QAndA.WEB/MVC6_QAndA.WEB.csproj
+++ b/MVC6_QAndA.WEB/MVC6_QAndA.WEB.csproj
@@ -11,6 +11,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MVC6_QAndA.BL\MVC6_QAndA.BL.csproj" />
+    <ProjectReference Include="..\MVC6_QAndA.CC\MVC6_QAndA.CC.csproj" />
+    <ProjectReference Include="..\MVC6_QAndA.DAL\MVC6_QAndA.DAL.csproj" />
   </ItemGroup>
 
 </Project>
